--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -3,15 +3,19 @@ $main-color : #949497;
 $txt-color :#636363;
 $headr-bg: #1a94ff;
 
-
-$white : white;
-$black : black;
-
-
+$colors: (
+    "blue": #4267b2,
+    "orange": #fbb96b,
+    "pink": #fe7e73,
+    "white": #fff,
+    "black": #000,
+    "main": $main-color,
+    "red": #ff0000,
+);
 $header-height : 6rem;
 $header-shrink-heigh: 9.625rem;
 $border-radius: 30px;
-
+$main-btn-color : #0D5CB6;
 $mobile-width: 600px;
 $tablet-width: 1024px;
 
