--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -4,7 +4,7 @@ $txt-color :#636363;
 $headr-bg: #1a94ff;
 
 $colors: (
-    "blue": #4267b2,
+    "blue": #0d5cb6,
     "orange": #fbb96b,
     "pink": #fe7e73,
     "white": #fff,
@@ -12,7 +12,7 @@ $colors: (
     "main": $main-color,
     "red": #ff0000,
 );
-$header-height : 6rem;
+$header-height : 6.125rem;
 $header-shrink-heigh: 9.625rem;
 $border-radius: 30px;
 $main-btn-color : #0D5CB6;
