--- a/src/App.scss
+++ b/src/App.scss
@@ -21,10 +21,10 @@
     }
 }
 
-html {
+body {
     font-family: 'Roboto', sans-serif;
-    font-size: 100%;
-    line-height: 2rem;
+    font-size: 62.5%;
+    line-height: 1rem;
     box-sizing: border-box;
     scroll-behavior: smooth;
    
